Simplify RepositoryState, decouple diff/fix, and clean up test data
Replace the 27-field RepositoryState record with a container of raw API
response objects (RepositoryMinimal, RepositoryFull, BranchProtection,
etc.) to eliminate redundant field extraction and make the model easier
to extend.

Rearchitect applyFixes() to stop parsing human-readable diff strings.
It now re-runs per-group check methods against actual vs desired state
and PATCHes the full desired state per endpoint group. Split
computeDiffs() into per-group check methods (checkRepoSettings,
checkTopics, checkSecuritySettings, checkWorkflowPermissions,
checkBranchProtection, checkSecrets) to prepare for adding new fixable
endpoint groups.

Replace repetitive 27-field test constructors with JSON fixtures and a
StateBuilder that merges overrides, reducing OrgCheckerDiffTest from
~1735 to ~780 lines while keeping all 82 tests passing.